data-stamper/objects/SObject_Stamper__mdt/SObject_Stamper__mdt.object-meta.xml
<CustomObject>
    <label>SObject Stamper</label>
    <pluralLabel>SObject Stampers</pluralLabel>
</CustomObject>