data-stamper/objects/SObject_Stamper__mdt/fields/Data_Types_Supported__c.field-meta.xml
<CustomField>
    <fullName>Data_Types_Supported__c</fullName>
    <label>Data Types (Supported)</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>DateTime</fullName>
                <label>Date/Time</label>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Id</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>