data-stamper/objects/SObject_Stamper__mdt/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <label>Formula</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>