data-stamper/objects/SObject_Stamper__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <label>SObject</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>SObject_Stampers</relationshipLabel>
    <relationshipName>SObject_Stampers</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>