data-stamper/objects/SObject_Stamper__mdt/fields/SObject_Field__c.field-meta.xml
<CustomField>
    <fullName>SObject_Field__c</fullName>
    <label>SObject Field</label>
    <metadataRelationshipControllingField>SObject_Stamper__mdt.SObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>SObject_Stampers</relationshipLabel>
    <relationshipName>SObject_Stampers</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
    <unique>true</unique>
</CustomField>